--- a/.shrc
+++ b/.shrc
@@ -29,4 +29,5 @@ fi
 # Both would be ('ignoreboth'). See bash(1) for more options.
 export HISTCONTROL=$HISTCONTROL${HISTCONTROL+,}ignoreboth
 
-[[ $(colima status 2>&1) =~ "colima is not running" ]] && colima start 2>/dev/null
+[[ $(colima status 2>&1) =~ "colima is not running" ]] \
+  && colima stop -f && limactl stop colima -f && colima start 2>/dev/null
