--- a/.ssh/config
+++ b/.ssh/config
@@ -1,15 +1,5 @@
 Include ~/.colima/ssh_config
 
-Host git-codecommit.*.amazonaws.com
-    ControlMaster no
-    ForwardAgent no
-    IdentityFile ~/.ssh/code_commit
-
-Host *.github.com
-    ForwardAgent no
-    IdentityFile ~/.ssh/github
-    User git
-
 Host *
     AddKeysToAgent yes
     AddressFamily inet
@@ -17,14 +7,33 @@ Host *
     Ciphers aes256-ctr,aes192-ctr,aes128-ctr
     Compression no
     ConnectTimeout 5
-    ControlMaster auto
-    ControlPath ~/.ssh/sockets/%C
-    ControlPersist 600
-    ForwardAgent yes
     HashKnownHosts yes
-    IdentityFile ~/.ssh/id_rsa
     KeepAlive yes
     MACs hmac-sha1,hmac-sha2-256,hmac-sha2-512
     Protocol 2
     ServerAliveInterval 60
     UseKeychain yes
+
+Host !git-codecommit.*.amazonaws.com !github.com
+    ControlMaster auto
+    ControlPath ~/.ssh/sockets/%C
+    ControlPersist 600
+    IdentityFile ~/.ssh/id_rsa
+    ForwardAgent yes
+
+Host git-codecommit.*.amazonaws.com
+    ControlMaster no
+    ControlPath none
+    ControlPersist 0
+    ForwardAgent no
+    IdentitiesOnly yes
+    IdentityFile ~/.ssh/code_commit
+
+Host github.com:*
+    ControlMaster no
+    ControlPath none
+    ControlPersist 0
+    ForwardAgent no
+    HostName github.com
+    IdentitiesOnly yes
+    User git
