--- a/.colima/default/colima.yaml
+++ b/.colima/default/colima.yaml
@@ -5,11 +5,11 @@ cpu: 4
 # Size of the disk in GiB to be allocated to the virtual machine.
 # NOTE: changing this has no effect after the virtual machine has been created.
 # Default: 60
-disk: 45
+disk: 60
 
 # Size of the memory in GiB to be allocated to the virtual machine.
 # Default: 2
-memory: 8
+memory: 16
 
 # Architecture of the virtual machine (x86_64, aarch64, host).
 # Default: host
@@ -145,7 +145,7 @@ rosetta: false
 # of concurrent reads or writes).
 #
 # Default: virtiofs (for vz), sshfs (for qemu)
-mountType: sshfs
+mountType: 9p
 
 # The CPU type for the virtual machine (requires vmType `qemu`).
 # Options available for host emulation can be checked with: `qemu-system-$(arch) -cpu help`.
