--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -41,6 +41,7 @@
   },
   "flow.showUncovered": true,
   "git.ignoreLimitWarning": true,
+  "http.proxyStrictSSL": false,
   "http.proxySupport": "off",
   "javascript.validate.enable": false,
   "omnisharp.enableRoslynAnalyzers": true,
