Adjust colima startup.

--- a/.shrc
+++ b/.shrc
@@ -30,4 +30,4 @@ fi
 export HISTCONTROL=$HISTCONTROL${HISTCONTROL+,}ignoreboth
 
 [[ $(colima status 2>&1) =~ "colima is not running" ]] \
-  && (colima stop -f; limactl stop colima -f; colima start 2>/dev/null)
+  && (limactl stop colima -f; colima start 2>/dev/null)
