--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,4 +1,5 @@
 {
+  "application.shellEnvironmentResolutionTimeout": 15,
   "diffEditor.ignoreTrimWhitespace": false,
   "editor.codeLens": false,
   "editor.fontFamily": "Source Code Pro",
