Adjust crontab file association.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -25,7 +25,8 @@
     "*.install": "php",
     "*.module": "php",
     "*.php": "php",
-    "*.theme": "php"
+    "*.theme": "php",
+    "crontab": "shellscript"
   },
   "files.exclude": {
     "**/.DS_Store": true,
