--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -43,6 +43,7 @@
   },
   "flow.showUncovered": true,
   "git.ignoreLimitWarning": true,
+  "http.proxyAuthorization": null,
   "http.proxyStrictSSL": false,
   "http.proxySupport": "off",
   "javascript.validate.enable": false,
