--- a/.colima/default/colima.yaml
+++ b/.colima/default/colima.yaml
@@ -30,15 +30,9 @@ kubernetes:
   # Default: latest stable release
   version: v1.25.4+k3s1
   
-  # Disable k3s features [coredns servicelb traefik local-storage metrics-server].
-  # All features are enabled unless disabled.
-  #
-  # EXAMPLE - disable traefik and metrics-server
-  # disable: [traefik, metrics-server]
-  #
-  # Default: [traefik]
-  disable:
-    - traefik
+  # Additional args to pass to k3s https://docs.k3s.io/cli/server
+  # Default: traefik is disabled
+  k3sArgs: []
 
 # Auto-activate on the Host for client access.
 # Setting to true does the following on startup
@@ -146,6 +140,10 @@ rosetta: true
 #
 # Default: virtiofs (for vz), sshfs (for qemu)
 mountType: virtiofs
+
+# Propagate inotify file events to the VM.
+# NOTE: this is experimental.
+mountInotify: false
 
 # The CPU type for the virtual machine (requires vmType `qemu`).
 # Options available for host emulation can be checked with: `qemu-system-$(arch) -cpu help`.
