--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -19,6 +19,7 @@
   },
   "errorLens.gutterIconsEnabled": true,
   "eslint.packageManager": "yarn",
+  "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "files.associations": {
     "*.inc": "php",
