--- a/.colima/default/colima.yaml
+++ b/.colima/default/colima.yaml
@@ -29,12 +29,12 @@ kubernetes:
   # Enable kubernetes.
   # Default: false
   enabled: false
-  
+
   # Kubernetes version to use.
   # This needs to exactly match a k3s version https://github.com/k3s-io/k3s/releases
   # Default: latest stable release
   version: v1.25.4+k3s1
-  
+
   # Additional args to pass to k3s https://docs.k3s.io/cli/server
   # Default: traefik is disabled
   k3sArgs: []
@@ -52,7 +52,7 @@ network:
   # NOTE: this is currently macOS only and ignored on Linux.
   # Default: false
   address: false
-  
+
   # Custom DNS resolvers for the virtual machine.
   #
   # EXAMPLE
@@ -64,7 +64,7 @@ network:
     - 8.8.4.4
     - 2001:4860:4860::8888
     - 2001:4860:4860::8844
-  
+
   # DNS hostnames to resolve to custom targets using the internal resolver.
   # This setting has no effect if a custom DNS resolver list is supplied above.
   # It does not configure the /etc/hosts files of any machine or container.
@@ -74,6 +74,12 @@ network:
   # dnsHosts:
   #   example.com: 1.2.3.4
   dnsHosts: {}
+
+  # Network driver to use (slirp, gvproxy), (requires vmType `qemu`)
+  #   - slirp is the default user mode networking provided by Qemu
+  #   - gvproxy is an alternative to VPNKit based on gVisor https://github.com/containers/gvisor-tap-vsock
+  # Default: gvproxy
+  driver: gvproxy
 
 # ===================================================================== #
 # ADVANCED CONFIGURATION
@@ -149,6 +155,14 @@ mountInotify: false
 # Instructions are also supported by appending to the cpu type e.g. "qemu64,+ssse3".
 # Default: host
 cpuType: host
+
+# For a more general purpose virtual machine, Ubuntu container is optionally provided
+# as a layer on the virtual machine.
+# The underlying virtual machine is still accessible via `colima ssh --layer=false` or running `colima` in
+# the Ubuntu session.
+#
+# Default: false
+layer: false
 
 # Custom provision scripts for the virtual machine.
 # Provisioning scripts are executed on startup and therefore needs to be idempotent.
