--- a/.colima/default/colima.yaml
+++ b/.colima/default/colima.yaml
@@ -74,7 +74,8 @@ network:
   # EXAMPLE
   # dnsHosts:
   #   example.com: 1.2.3.4
-  dnsHosts: {}
+  dnsHosts:
+    host.docker.internal: host.lima.internal
 
 # ===================================================================== #
 # ADVANCED CONFIGURATION
@@ -127,7 +128,7 @@ vmType: vz
 
 # Utilise rosetta for amd64 emulation (requires m1 mac and vmType `vz`)
 # Default: false
-rosetta: false
+rosetta: true
 
 # Volume mount driver for the virtual machine (virtiofs, 9p, sshfs).
 #
