Adjust vscode config.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -46,6 +46,7 @@
   "flow.showUncovered": true,
   "git.ignoreLimitWarning": true,
   "git.openRepositoryInParentFolders": "never",
+  "github.copilot.editor.enableAutoCompletions": true,
   "http.proxyAuthorization": null,
   "http.proxyStrictSSL": false,
   "http.proxySupport": "off",
