--- a/.colima/default/colima.yaml
+++ b/.colima/default/colima.yaml
@@ -34,12 +34,12 @@ kubernetes:
   # Enable kubernetes.
   # Default: false
   enabled: false
-  
+
   # Kubernetes version to use.
   # This needs to exactly match a k3s version https://github.com/k3s-io/k3s/releases
   # Default: latest stable release
   version: v1.28.3+k3s2
-  
+
   # Additional args to pass to k3s https://docs.k3s.io/cli/server
   # Default: traefik is disabled
   k3sArgs:
@@ -57,8 +57,9 @@ network:
   # Assign reachable IP address to the virtual machine.
   # NOTE: this is currently macOS only and ignored on Linux.
   # Default: false
-  address: false
-  
+  # address: false
+  address: true
+
   # Custom DNS resolvers for the virtual machine.
   #
   # EXAMPLE
@@ -70,7 +71,7 @@ network:
     - 8.8.4.4
     - 2001:4860:4860::8888
     - 2001:4860:4860::8844
-  
+
   # DNS hostnames to resolve to custom targets using the internal resolver.
   # This setting has no effect if a custom DNS resolver list is supplied above.
   # It does not configure the /etc/hosts files of any machine or container.
@@ -81,7 +82,7 @@ network:
   #   example.com: 1.2.3.4
   dnsHosts:
     host.docker.internal: host.lima.internal
-  
+
   # Replicate host IP addresses in the VM. This enables port forwarding to specific
   # host IP addresses.
   #   e.g. `docker run --port 10.0.1.2:8080:8080 alpine` would only forward to the
@@ -138,7 +139,8 @@ docker:
 #
 # NOTE: value cannot be changed after virtual machine is created.
 # Default: qemu
-vmType: qemu
+# vmType: qemu
+vmType: vz
 
 # Utilise rosetta for amd64 emulation (requires m1 mac and vmType `vz`)
 # Default: false
@@ -169,7 +171,8 @@ mountInotify: false
 # Options available for host emulation can be checked with: `qemu-system-$(arch) -cpu help`.
 # Instructions are also supported by appending to the cpu type e.g. "qemu64,+ssse3".
 # Default: host
-cpuType: qemu64,+ssse3,+sse4.1,+sse4.2,+popcnt,+lahf_lm,+movbe
+# cpuType: qemu64,+ssse3,+sse4.1,+sse4.2,+popcnt,+lahf_lm,+movbe
+cpuType: host
 
 # Custom provision scripts for the virtual machine.
 # Provisioning scripts are executed on startup and therefore needs to be idempotent.
