Adjust configs, upgrade PHP.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,4 +1,7 @@
 {
+  "[github-actions-workflow]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml"
+  },
   "application.shellEnvironmentResolutionTimeout": 60,
   "diffEditor.ignoreTrimWhitespace": false,
   "docker.extension.enableComposeLanguageServer": false,
