--- a/.colima/default/colima.yaml
+++ b/.colima/default/colima.yaml
@@ -2,7 +2,7 @@
 # Default: 2
 cpu: 4
 
-# Size of the disk in GiB to be allocated to the virtual machine for container data.
+# Size of the disk in GiB to be allocated to the virtual machine.
 # NOTE: value can only be increased after virtual machine has been created.
 #
 # Default: 100
@@ -44,17 +44,11 @@ kubernetes:
   # Default: traefik is disabled
   k3sArgs:
     - --disable=traefik
-  
-  # Kubernetes port to listen on
-  # A common port is 6443, though left unbound to ensure no port conflicts
-  # Default: pick random unbound port
-  port: 0
 
 # Auto-activate on the Host for client access.
 # Setting to true does the following on startup
 #  - sets as active Docker context (for Docker runtime).
 #  - sets as active Kubernetes context (if Kubernetes is enabled).
-#  - sets as active Incus remote (for Incus runtime).
 # Default: true
 autoActivate: true
 
@@ -64,22 +58,6 @@ network:
   # NOTE: this is currently macOS only and ignored on Linux.
   # Default: false
   address: true
-  
-  # Network mode for the virtual machine (shared, bridged).
-  # NOTE: this is currently macOS only and ignored on Linux.
-  # Default: shared
-  mode: ""
-  
-  # Network interface to use for bridged mode.
-  # This is only used when mode is set to bridged.
-  # NOTE: this is currently macOS only and ignored on Linux.
-  # Default: en0
-  interface: ""
-  
-  # Use the assigned IP address as the preferred route for the VM.
-  # Note: this only has an effect when `address` is set to true.
-  # Default: false
-  preferredRoute: false
   
   # Custom DNS resolvers for the virtual machine.
   #
@@ -162,20 +140,9 @@ docker:
 # Default: qemu
 vmType: vz
 
-# Port forwarder for the virtual machine (ssh, grpc).
-# ssh is more stable but supports only TCP.
-# grpc supports both TCP and UDP, but is experimental.
-#
-# Default: ssh
-portForwarder: ssh
-
 # Utilise rosetta for amd64 emulation (requires m1 mac and vmType `vz`)
 # Default: false
 rosetta: true
-
-# Enable foreign architecture emulation via binfmt (e.g. amd64 on arm64, arm64 on amd64)
-# Default: true
-binfmt: true
 
 # Enable nested virtualization for the virtual machine (requires m3 mac and vmType `vz`)
 # Default: false
@@ -245,7 +212,7 @@ sshPort: 0
 #   - location: ~/projects
 #     writable: true
 #
-# Colima default behaviour: $HOME is mounted as writable.
+# Colima default behaviour: $HOME and /tmp/colima are mounted as writable.
 # Default: []
 mounts: []
 
@@ -256,11 +223,6 @@ mounts: []
 #
 # Default: ""
 diskImage: ""
-
-# Size of the disk in GiB for the root filesystem of the virtual machine.
-# This value is ignored if no runtime is in use. i.e. `none` runtime.
-# Default: 20
-rootDisk: 20
 
 # Environment variables for the virtual machine.
 #
