Adjust file associations.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -29,8 +29,8 @@
     "*.module": "php",
     "*.php": "php",
     "*.theme": "php",
-    "*.ts": "javascript",
-    "*.tsx": "javascriptreact"
+    "*.ts": "typescript",
+    "*.tsx": "typescriptreact"
   },
   "files.exclude": {
     "**/.DS_Store": true,
