Disable copilot next suggestion.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -51,6 +51,7 @@
   "github.copilot.enable": {
     "*": false
   },
+  "github.copilot.nextEditSuggestions.enabled": false,
   "gitlens.ai.model": "vscode",
   "gitlens.ai.vscode.model": "copilot:gpt-4.1",
   "git.openRepositoryInParentFolders": "never",
